--- a/index.html
+++ b/index.html
@@ -159,31 +159,31 @@
                 </div>
                 <div class="container-right">
                     <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
-                    <p>Hello! I am an Embedded/Firmware Software Engineer with a focus on <span
-                            class="bold main-color">C, C++,</span> and <span class="bold main-color">Python</span>.
-                        Bringing over 5 years of experience to the table, I offer comprehensive expertise throughout the
-                        entire product development lifecycle, from the initial concept to mass production.</p>
-                    <p>In leading embedded development projects, my strengths in code architecture and design become
-                        particularly evident. This is complemented by my adept management of <span
-                            class="bold main-color">complex logic</span> and <span class="bold main-color">intricate
-                            state machines</span>. Additionally, I have developed a specialization in RF systems, with a
-                        focus on crafting energy-efficient and low-power solutions. This holistic approach is vital for
-                        developing robust and scalable embedded solutions from scratch.</p>
-                    <p>My areas of specialization extend to <span class="bold main-color">IoT products</span>, motor
-                        control, closed-loop systems, and RF low-power systems. I have a unique skill in developing
-                        intelligent systems that integrate advanced technologies, sleep modes, and ULP (Ultra Low Power
-                        Co-processors) to achieve <span class="bold main-color">optimum energy efficiency</span>. My
-                        experience in programming these ULP co-processors using assembly language is a key aspect of my
-                        ability to create highly efficient and sustainable solutions.</p>
-                    <p>My passion is centered around designing field-independent products and RF systems that serve as
-                        benchmarks in energy efficiency.</p>
 
-                    <p>Let's <span class="bold second-color">connect<i class='bx bx-chat'></i></span> and discover how
-                        our collaboration can propel technological innovation forward.</p>
+                    <p>Senior Embedded &amp; Firmware Engineer (~6 years). I <span class="bold main-color">lead firmware
+                            architecture</span> end-to-end—from concept and prototypes to validation and mass
+                        production—designing clear codebases, robust finite-state machines, and safe OTA/FOTA flows with
+                        staged rollouts, health checks, telemetry, and automatic rollback.</p>
+
+                    <p>I work across firmware, RF, and systems: Wi-Fi/BLE, sub-GHz, cellular and IP protocols; drivers
+                        and bootloaders; board bring-up and production test. I'm hands-on with <span
+                            class="bold main-color">root-cause analysis</span> for timing, schematic, and electrical
+                        bugs, driving corrective actions that stick and adding diagnostics that prevent regressions.</p>
+
+                    <p>Beyond embedded video and signal work, I build low-latency pipelines (RTMP → processing → output)
+                        on Linux with GPU acceleration, and I automate tooling and test fixtures to keep teams moving
+                        quickly and safely.</p>
+
+                    <p><span class="bold main-color">My home lab</span> keeps me fast and practical: oscilloscopes,
+                        logic &amp; spectrum analyzers, electronic loads, function generators, rework tools, and custom
+                        test fixtures—so I can prototype, measure, and iterate quickly.</p>
+
+                    <p><span class="bold main-color">Core tools &amp; skills:</span> C/C++, Python, Assembly; FSM/RTOS,
+                        drivers, bootloaders; Git/CI; DFM/DFT &amp; fab sign-off.</p>
+
+                    <p>Let's <span class="bold second-color">connect<i class='bx bx-chat'></i></span> and turn hard
+                        problems into dependable products.</p>
                 </div>
-
-
-
             </div>
         </div>
     </section>
